script-answers/exercise12_8.txt
 cat typescript
Script started on 2023-10-08 03:31:07+00:00 [TERM="xterm" TTY="/dev/pts/0" COLUMNS="150" LINES="40"]
# pwd
/
# cd docker-entrypoint-initdb.d
# pwd
/docker-entrypoint-initdb.d
# mongosh
Current Mongosh Log ID: 652222caab4cc9f6f7b46c12
Connecting to:          mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.0.1
Using MongoDB:          7.0.2
Using Mongosh:          2.0.1

For mongosh info see: https://docs.mongodb.com/mongodb-shell/

test> show dbs
MongoServerError: Command listDatabases requires authentication
test> show dbs -u root -p example
MongoServerError: Command listDatabases requires authentication
test> db.auth
[Function: auth] AsyncFunction {
  returnsPromise: true,
  serverVersions: [ '0.0.0', '999.999.999' ],
  apiVersions: [ 0, Infinity ],
  topologies: [ 'ReplSet', 'Sharded', 'LoadBalanced', 'Standalone' ],
  returnType: { type: 'unknown', attributes: {} },
  deprecated: false,
  platforms: [ 'Compass', 'Browser', 'CLI' ],
  isDirectShellCommand: false,
  acceptsRawInput: false,
  shellCommandCompleter: undefined,
  help: [Function (anonymous)] Help
}
test> db.auth("root", passwordPrompt())
Enter password
example
MongoServerError: Authentication failed.
test> db.auth("root", "example")
MongoServerError: Authentication failed.
test> mongocli auth login
Uncaught:
SyntaxError: Missing semicolon. (1:8)

> 1 | mongocli auth login
    |         ^
  2 |

test> mongocli auth login
Uncaught:
SyntaxError: Missing semicolon. (1:8)

> 1 | mongocli auth login
    |         ^
  2 |

test>

test> exit
# mongosh -u root -p example
Current Mongosh Log ID: 65222669c19fe6afc53be540
Connecting to:          mongodb://<credentials>@127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.0.1
Using MongoDB:          7.0.2
Using Mongosh:          2.0.1

For mongosh info see: https://docs.mongodb.com/mongodb-shell/

------
   The server generated these startup warnings when booting
   2023-10-07T12:58:49.824+00:00: Using the XFS filesystem is strongly recommended with the WiredTiger storage engine. See http://dochub.mongodb.org/c
ore/prodnotes-filesystem
   2023-10-07T12:58:51.048+00:00: /sys/kernel/mm/transparent_hugepage/enabled is 'always'. We suggest setting it to 'never'
   2023-10-07T12:58:51.048+00:00: vm.max_map_count is too low
------

test> show dbs
admin         100.00 KiB
config         72.00 KiB
local          72.00 KiB
the_database   72.00 KiB
test> use the_database
switched to db the_database
the_database> show colloections
MongoshInvalidInputError: [COMMON-10001] 'colloections' is not a valid argument for "show".
the_database> show collections
todos
the_database> --help
NaN
the_database> -help
NaN
the_database> show -h
MongoshInvalidInputError: [COMMON-10001] '-h' is not a valid argument for "show".
the_database> show -help
MongoshInvalidInputError: [COMMON-10001] '-help' is not a valid argument for "show".
the_database> show --help
MongoshInvalidInputError: [COMMON-10001] '--help' is not a valid argument for "show".
the_database> db.todos.find({})
[
  {
    _id: ObjectId("65215608844c0ba4f524f51b"),
    text: 'Write code',
    done: true
  },
  {
    _id: ObjectId("65215608844c0ba4f524f51c"),
    text: 'Learn about containers',
    done: false
  },
  {
    _id: ObjectId("6521705046c3c1385cccd21a"),
    text: 'Make food',
    done: false,
    __v: 0
  }
]
the_database> db.insertOne({
...         "text": "Increase the number of tools in my toolbelt" ,
...         "done": false
...     })
TypeError: db.insertOne is not a function
the_database> db.todos.insertOne({ "text": "Increase the number of tools in my toolbelt", "done": false })
{
  acknowledged: true,
  insertedId: ObjectId("65222b17c19fe6afc53be541")
}
the_database> db.todos.find({})
[
  {
    _id: ObjectId("65215608844c0ba4f524f51b"),
    text: 'Write code',
    done: true
  },
  {
    _id: ObjectId("65215608844c0ba4f524f51c"),
    text: 'Learn about containers',
    done: false
  },
  {
    _id: ObjectId("6521705046c3c1385cccd21a"),
    text: 'Make food',
    done: false,
    __v: 0
  },
  {
    _id: ObjectId("65222b17c19fe6afc53be541"),
    text: 'Increase the number of tools in my toolbelt',
    done: false
  }
]
the_database> exit
# exit

Script done on 2023-10-08 18:35:30+00:00 [COMMAND_EXIT_CODE="0"]
